# haskell-bazel-nix-template

./: .bazelrc  .ghcid  BUILD.bazel  Main.hs  README.md  WORKSPACE  shell.nix
bazel/: zlib-hs.bzl
nix/nixpkgs/: BUILD.bazel  default.nix
src/: Lib.hs  Server.hs
