# Set all target’s visibility in this package to "public".
package(default_visibility = ["//visibility:public"])

# Load rules_haskell rules.
load(
    "@rules_haskell//haskell:defs.bzl",
    "haskell_binary",
    "haskell_library",
    "haskell_repl",
    "haskell_toolchain_library",
)

# haskell_toolchain_library can access builtin GHC packages
# and assign them a bazel target name, so that they
# can be referenced as dependencies.
haskell_toolchain_library(name = "base")

haskell_library(
    name = "lib",
    src_strip_prefix = "src",
    srcs = glob(["src/**/*.hs"]),
    deps = [
        ":base",
        "@stackage//:wai",
        "@stackage//:http-types",
        "@stackage//:warp",
    ],
)

haskell_binary(
    name = "main",
    srcs = [":Main.hs"],
    deps = [
        ":lib",
    ],
)

# Repl target for ghcid
haskell_repl(
    name = "repl",
    deps = [
        ":main",
        ":lib",
    ],
)
